Fix: align user display items to the add button
Increase the top margin of user display items (writers, publishers) so
that they are inline with the add-user button.

--- a/app/static/css/article-pages.css
+++ b/app/static/css/article-pages.css
@@ -146,6 +146,7 @@ textarea.form-text-header {
 [data-user] {
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 1rem;
 }
 .result-display img {
     display: block;
